--- a/Hacka/n-ativos.ipynb
+++ b/Hacka/n-ativos.ipynb
@@ -282,7 +282,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def minimize_vol(e_r, cov, rp, eps = 0.0001, sim = 100000):\n"
+   ]
   }
  ],
  "metadata": {
