--- a/Hacka/AlgoritmoGenetico .ipynb
+++ b/Hacka/AlgoritmoGenetico .ipynb
@@ -42,55 +42,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1257,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def minimize_ipm(rp, e_r, cov, w):\n",
-    "    n =  e_r.shape[0]\n",
-    "    dc = np.hstack((np.ones((n,1)), e_r))\n",
-    "    #Primeiro Chute\n",
-    "    #w = (np.ones(n)*1/n).reshape(n, 1)#Carteira\n",
-    "    w = w/sum(w)\n",
-    "    l = -1*(np.linalg.inv(dc.T@dc)@dc.T@cov@w)#Multiplicadores de Lagrange\n",
-    "    \n",
-    "    #Calculando grad(c(x)) \n",
-    "    #Criando a Matriz A\n",
-    "    def generate_A(Sigma, dc, n, delta1 = 0, delta2 =0.0):\n",
-    "        a = np.hstack([2*Sigma+delta1*np.eye(len(w)), dc])\n",
-    "        b = np.hstack([dc.T, np.zeros((2,2))-delta2*np.eye(2)])\n",
-    "        return np.vstack((a, b))\n",
-    "    \n",
-    "    #Criando o vetor b.\n",
-    "    def generate_b(Sigma, dc, e_r, l, w, rp):\n",
-    "        a = 2*Sigma@w + dc@l\n",
-    "        b = np.ones((1,n))@w - 1\n",
-    "        c = e_r.T@w - rp\n",
-    "        return -1*np.vstack((a, b, c))\n",
-    "    \n",
-    "    def grad(w, cov, l, dc):\n",
-    "        return (2*cov@w+ dc@l)\n",
-    "    \n",
-    "    A = generate_A(cov, dc, n)\n",
-    "    \n",
-    "    i = 0\n",
-    "    for i in range(100):                                               #while max(np.abs((grad(w,cov, l, dc)))) > eps:\n",
-    "        b = generate_b(cov, dc, e_r, l, w, rp)\n",
-    "        #print(\"b: \",b, \"\\n\")\n",
-    "        dx = np.linalg.inv(A)@b\n",
-    "        #print(\"dx: \", dx, \"\\n\")\n",
-    "        dw, dl = dx[0:n][:], dx[n:n+2][:]\n",
-    "        w = w + alpha*dw\n",
-    "        #print(\"w: \\n\", w, \"\\n\")\n",
-    "        l = l + alpha*dl\n",
-    "        \n",
-    "    return w"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1270,
    "metadata": {},
    "outputs": [],
@@ -471,7 +422,7 @@
     }
    ],
    "source": [
-    "carteiras_scipy"
+    "minimize_vol()"
    ]
   },
   {
